--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Live Github Pages</title>
 </head>
 <body>
-    Hello World!    
+    Hello World! 
+    Testing VSCodium  
 </body>
 </html>
