--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     Hello World! 
     Testing VSCodium  
-     <a href="/maxumite.eu/index" class="button button5">Lorem</a>
+     <a href="/maxunite.eu/index" class="button button5">Lorem</a>
 </body>
 </html>
