--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     Hello World! 
     Testing VSCodium  
-     <a href="/maxunite.eu/index" class="button button5">Lorem</a>
+     <a href="/maxunite.eu/index.html" class="button button5">Lorem</a>
      trala
 </body>
 </html>
