--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Hello World! 
     Testing VSCodium  
      <a href="/maxunite.eu/index.html" class="button button5">Lorem</a>
-     <a href="/HBO_Full_Stack_Dev" class="button button5">Ipsum</a>
+     <a href="HBO_Full_Stack_Dev" class="button button5">Ipsum</a>
      
      trala
 </body>
