amsterdam site added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Hello World! 
     Testing VSCodium  
      <a href="/maxunite.eu/index.html" class="button button5">Lorem</a>
-     <a href="Vr3/index2.html" class="button button5">Ipsum</a>
+     <a href="/Amsterdam/index.html" class="button button5">Amsterdam</a>
      
      trala
 </body>
