--- a/Amsterdam/index.html
+++ b/Amsterdam/index.html
@@ -46,13 +46,13 @@
 
     <h2>Foto's van onze prachtige stad</h2>
     <div class="images" id="fotos">
-        <img src="images/houses.jpg" alt="Voormalig pakhuizen Amsterdam">
+        <img src="../Amsterdam/images/houses.jpg" alt="Voormalig pakhuizen Amsterdam">
 
-        <img src="images/bikes.jpg" class="transparent" alt="Oude fietsen in Amsterdam">
+        <img src="../Amsterdam/images/bikes.jpg" class="transparent" alt="Oude fietsen in Amsterdam">
 
-        <img src="images/canal.jpg" class="transparent" alt="Gracht in Amsterdam">
+        <img src="../Amsterdam/images/canal.jpg" class="transparent" alt="Gracht in Amsterdam">
 
-        <img src="images/munt.jpg" alt="Old Amsterdam">
+        <img src="../Amsterdam/images/munt.jpg" alt="Old Amsterdam">
     </div>
     <br>
     <br>
