--- a/Eindopdracht HTML&CSS/surprise.html
+++ b/Eindopdracht HTML&CSS/surprise.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Live Github Pages</title>
+    <title>Document</title>
 </head>
 <body>
     <nav>
         <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
         <input type="checkbox" id="menu-toggle">
         <ul>
-            <li><i class="fa fa-home"></i><a href="/Amsterdam/index.html">Amsterdam</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/maxunite.eu/index.html">MaxUnite</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="Eindopdracht HTML&CSS/index.html">Eindopdracht</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/surprise.html">Spare</a></li>
+            <li><i class="fa fa-home"></i><a href="/Eindopdracht HTML&CSS/index.html">Home</a></li>
+            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/history.html">History</a></li>
+            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
             <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/contact.html">Contact</a></li>
         </ul>
-    </nav>   
+    </nav>
     
 </body>
 </html>
