--- a/Eindopdracht HTML&CSS/surprise.html
+++ b/Eindopdracht HTML&CSS/surprise.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,97 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <nav>
         <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
         <input type="checkbox" id="menu-toggle">
         <ul>
-            <li><i class="fa fa-home"></i><a href="/Eindopdracht HTML&CSS/index.html">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/history.html">History</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/contact.html">Contact</a></li>
+            <li><i class="fa fa-home"></i><a href="index">Home</a></li>
+            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/history.html">History</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/unexpected.html">Unexpected</a></li>
+            <li class="active"><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/surprise.html"
+                    id="surprise">Surprise</a></li>
+            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <img src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
     
+    <p>
+  <h2>Amsterdam: The Surprising City</h2> 
+    
+    Amsterdam, the capital city of the Netherlands, is known for its picturesque canals, historical architecture, and
+    vibrant cultural scene. However, there is much more to this city than meets the eye. Whether you are a first-time
+    visitor or a seasoned traveler, here are some surprising facts about Amsterdam that are sure to leave you in awe.
+</p>
+
+<p>
+    <img src="/images/bikes.jpg" alt="bicycles parked on bridge">
+    <br>
+    Amsterdam is the cycling capital of the world.
+    With over 800,000 bicycles and only 700,000 residents, Amsterdam is the world's leading city for cycling. The city
+    is designed with cyclists in mind, with bike lanes and bike parks at every turn. In fact, cycling is so popular in
+    Amsterdam that it is considered the most bicycle-friendly city in the world.
+</p>
+
+<p>
+    <img src="/images/old-stockexchange.jpg" alt="old stockexchage">
+    <br>
+    Amsterdam is home to the world's first stock exchange.
+    Established in 1720, the Amsterdam Stock Exchange was the first in the world and played a significant role in the
+    development of modern finance. Today, the building that once housed the stock exchange serves as the home of the
+    national historical museum, the Amsterdam Museum.
+</p>
+
+<p>
+    <img src="/images/poles.png" alt="amsterdam build on poles">
+    <br>
+    Amsterdam is built on poles.
+    The city of Amsterdam is built on poles, and the ground is below sea level. To protect against floods, the city has
+    an elaborate system of dikes, dams, and canals. In fact, one-third of the city is actually below sea level.
+</p>
+<br>
+<p>
+    Amsterdam is home to the world's only floating flower market.
+    Located in the heart of Amsterdam, the floating flower market is a unique attraction that attracts millions of
+    visitors every year. The market offers a variety of flowers, plants, and bulbs, and is a must-visit for anyone
+    interested in horticulture or just looking for a unique shopping experience.
+</p>
+<br>
+<p>
+    Amsterdam has its own floating forest.
+    The NEMO Science Museum in Amsterdam is known for its distinctive green roof, which doubles as a floating forest.
+    The rooftop garden is home to over 2,500 plants and trees, and offers stunning views of the city.
+</p>
+<br>
+<p>
+    Amsterdam was once the center of the world's diamond trade.
+    For over 400 years, Amsterdam was the center of the world's diamond trade, and it remains an important hub for the
+    industry to this day. The city is home to many of the world's leading diamond dealers, and visitors can tour the
+    Diamond Museum to learn more about the history and science of diamonds.
+</p>
+<br>
+<p>
+    These are just a few of the many surprising facts about Amsterdam that make it a unique and fascinating city.
+    Whether you are interested in history, culture, or just looking for a new adventure, Amsterdam is sure to captivate
+    and inspire.
+</p>
+
+
+
+
+
+
+    <!-- Footer -->
+    <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+        <a href="#surprise" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+        <div class="w3-xlarge w3-section">
+            <i class="fa fa fa-github w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
+        </div>
+    </footer>
+
 </body>
+
 </html>
