--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -15,24 +15,43 @@
         <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
         <input type="checkbox" id="menu-toggle">
         <ul>
-            <li><i class="fa fa-home"></i><a href="/Eindopdracht HTML&CSS/index.html">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/history.html">History</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/contact.html">Contact</a></li>
+            <li class="active"><i class="fa fa-home"></i><a  href="index">Home</a></li>
+            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/history.html">History</a></li>
+            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/unexpected.html">Unexpected</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/surprise.html">Surprise</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <br>
+    <br>
+    <img src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
 
     <h1>Surprising Amsterdam</h1>
 
     <p>
         "Welcome to Surprising Amsterdam, your ultimate guide to the hidden gems and lesser-known treasures of one of
-        the most vibrant and beautiful cities in the world. From secret gardens to underground clubs, from hidden
-        museums to undiscovered neighborhoods, we'll take you on a journey through the lesser-known side of Amsterdam,
-        and show you the city like you've never seen it before. Join us and explore the charming, unexpected, and
-        unforgettable places that make Amsterdam truly unique. Let's start discovering!"
+        the most vibrant and beautiful cities in the world. 
     </p>
 
+    <img src="/images/buildings-on canal.jpg" alt="buildings on canal">
+    <img src="/images/night-canal.jpg" alt="canal by night">
+    <img src="/images/street-jordaan.jpg" alt="street in jordaan">
+
+    <p>From secret gardens to underground clubs, from hidden
+        museums to undiscovered neighborhoods, we'll take you on a journey through the lesser-known side of Amsterdam,
+        and show you the city like you've never seen it before. Join us and explore the charming, unexpected, and
+        unforgettable places that make Amsterdam truly unique. Let's start discovering!"</p>
+
 </body>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+    <a href="/index.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <div class="w3-xlarge w3-section">
+      <i class="fa fa fa-github w3-hover-opacity"></i>      
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+  </footer>
 
 </html>
