--- a/Eindopdracht HTML&CSS/unexpected.html
+++ b/Eindopdracht HTML&CSS/unexpected.html
@@ -13,13 +13,16 @@
         <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
         <input type="checkbox" id="menu-toggle">
         <ul>
-            <li><i class="fa fa-home"></i><a href="/Eindopdracht HTML&CSS/index.html">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/history.html">History</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/contact.html">Contact</a></li>
+            <li><i class="fa fa-home"></i><a href="index">Home</a></li>
+            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/history.html">History</a></li>
+            <li class="active"><i class="fa fa-anchor" aria-hidden="true"></i><a href="/unexpected.html" id="unexpected">Unexpected</a></li>
+            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/surprise.html">Surprise</a></li>
+            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <img src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
+
     <p>
         Amsterdam is a popular tourist destination, known for its picturesque canals, historic architecture, and world-renowned museums. However, there are also many lesser-known places in Amsterdam that are worth visiting. Here are a few examples of unknown places in Amsterdam that you might consider adding to your website:
 
@@ -44,4 +47,13 @@ The NDSM Wharf: This is a large former shipyard located on the north bank of the
 The Hermitage Amsterdam: The Hermitage Amsterdam is a museum located in the heart of Amsterdam, it's a branch of the Hermitage Museum in St. Petersburg and it often has temporary exhibitions of masterpieces from the Hermitage collection.
     </p>
 </body>
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+    <a href="#unexpected" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <div class="w3-xlarge w3-section">
+      <i class="fa fa fa-github w3-hover-opacity"></i>      
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+  </footer>
+
 </html>
