--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -16,10 +16,10 @@
         <input type="checkbox" id="menu-toggle">
         <ul>
             <li class="active"><i class="fa fa-home"></i><a  href="index">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/history.html">History</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/contact.html">Contact</a></li>
+            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/history.html">History</a></li>
+            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/contact.html">Contact</a></li>
         </ul>
     </nav>
 
