--- a/Eindopdracht HTML&CSS/contact.html
+++ b/Eindopdracht HTML&CSS/contact.html
@@ -14,10 +14,10 @@
         <input type="checkbox" id="menu-toggle">
         <ul>
             <li><i class="fa fa-home"></i><a href="index">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/history.html">History</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/surprise.html">Surprise</a></li>
-            <li class="active"><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="contact.html" id="contact">Contact</a></li>
+            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/history.html">History</a></li>
+            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
+            <li class="active"><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/contact.html" id="contact">Contact</a></li>
         </ul>
     </nav>
 
