--- a/Eindopdracht HTML&CSS/history.html
+++ b/Eindopdracht HTML&CSS/history.html
@@ -15,7 +15,7 @@
         <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
         <input type="checkbox" id="menu-toggle">
         <ul>
-            <li><i class="fa fa-home"></i><a href="index">Home</a></li>
+            <li><i class="fa fa-home"></i><a href="../Eindopdracht HTML&CSS/index">Home</a></li>
             <li class="dropdown active">
                 <button class="dropbtn"  id="history"></i>History
                     <i class="fa fa-caret-down"></i>
@@ -27,9 +27,9 @@
                 </div>
                 <br>
             </li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="contact.html">Contact</a></li>
+            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
+            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/contact.html">Contact</a></li>
         </ul>
     </nav>
 
