--- a/Eindopdracht HTML&CSS/contact.html
+++ b/Eindopdracht HTML&CSS/contact.html
@@ -81,6 +81,12 @@
         }
     </script> -->
 
+    <div>
+      <img src="images/map.jpg" alt="map"
+        onclick="window.open('https://www.google.com/maps/place/MaxUnite+Communication+%26+Information+Services/@52.2861511,4.9641506,1381a,35y,39.13t/data=!3m1!1e3!4m5!3m4!1s0x0:0x95c20ffb169755f4!8m2!3d52.2937955!4d4.9711418?hl=nl',width=50,height=50)"
+        class="w3-image w3-round" style="width:100%">
+    </div>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
