--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li><i class="fa fa-home"></i><a href="/Amsterdam/index.html">Amsterdam</a></li>
             <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="/maxunite.eu/index.html">MaxUnite</a></li>
             <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="Eindopdracht HTML&CSS/index.html">Eindopdracht</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/surprise.html">Spare</a></li>
-            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="/Eindopdracht HTML&CSS/contact.html">Contact</a></li>
+            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="/spare.html">Spare</a></li>
+            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>   
     
