--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -7,31 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="responsive.js"></script>
     <title>Welcome to the Surprising Amsterdam Website</title>
 </head>
 
 <body>
-    <nav>
-        <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
-        <input type="checkbox" id="menu-toggle">
-        <ul>
-            <li class="active"><i class="fa fa-home"></i><a  href="index">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/history.html">History</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/unexpected.html">Unexpected</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <br>
-    <br>
-    <img src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn">History
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="history.html#first">Early History</a>
+                <a href="history.html#middle">17th-18th-19th Century</a>
+                <a href="history.html#last">Last Centuries</a>
+            </div>
+        </div>
+        <a href="/unexpected.html" id="unexpected">Unexpected</a>
+        <a href="/surprise.html">Surprise</a>
+        <a href="contact.html">Contact</a>
+        <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>  
+    <br>    
+    <img class="logo" src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
 
     <h1>Surprising Amsterdam</h1>
 
     <p>
         "Welcome to Surprising Amsterdam, your ultimate guide to the hidden gems and lesser-known treasures of one of
-        the most vibrant and beautiful cities in the world. 
+        the most vibrant and beautiful cities in the world.
     </p>
 
     <img src="/images/buildings-on canal.jpg" alt="buildings on canal">
@@ -45,13 +51,25 @@
 
 </body>
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-    <a href="/index.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa fa-github w3-hover-opacity"></i>      
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+<!-- <footer>
+    <i class="fa fa fa-github w3-hover-opacity"></i>
+    <a href="#myTopnav">To the top</a>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+</footer> -->
+
+<footer class="footer">
+    <div class="footer-container">
+      <nav class="footer-nav">
+        <ul class="footer-menu">
+          <li><a href="#">Home</a></li>
+          <li title="Check my github live pages."><a href="https://martingue.github.io"><i class="fa fa fa-github"></i></a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <p title="Thanks very much for visiting Surprising Amsterdam!!" class="footer-copyright">&copy; Surprising Amsterdam</p>
     </div>
   </footer>
+
+
 
 </html>
