--- a/Eindopdracht HTML&CSS/unexpected.html
+++ b/Eindopdracht HTML&CSS/unexpected.html
@@ -1,58 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="responsive.js"></script>
     <title>Document</title>
 </head>
-<body>
-    <nav>
-        <label for="menu-toggle"><i class="fa fa-bars"></i> MENU</label>
-        <input type="checkbox" id="menu-toggle">
-        <ul>
-            <li><i class="fa fa-home"></i><a href="index">Home</a></li>
-            <li><i class="fa fa-newspaper-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/history.html">History</a></li>
-            <li class="active"><i class="fa fa-anchor" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/unexpected.html" id="unexpected">Unexpected</a></li>
-            <li><i class="fa fa-credit-card-alt" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a></li>
-            <li><i class="fa fa-address-book-o" aria-hidden="true"></i><a href="../Eindopdracht HTML&CSS/contact.html">Contact</a></li>
-        </ul>
-    </nav>
 
-    <img src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
+<body>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn">History
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="history.html#first">Early History</a>
+                <a href="history.html#middle">17th-18th-19th Century</a>
+                <a href="history.html#last">Last Centuries</a>
+            </div>
+        </div>
+        <a href="/unexpected.html" id="unexpected" class="active">Unexpected</a>
+        <a href="/surprise.html">Surprise</a>
+        <a href="contact.html">Contact</a>
+        <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+
+    <img class="logo" src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
 
     <p>
-        Amsterdam is a popular tourist destination, known for its picturesque canals, historic architecture, and world-renowned museums. However, there are also many lesser-known places in Amsterdam that are worth visiting. Here are a few examples of unknown places in Amsterdam that you might consider adding to your website:
+        Amsterdam is a popular tourist destination, known for its picturesque canals, historic architecture, and
+        world-renowned museums. However, there are also many lesser-known places in Amsterdam that are worth visiting.
+        Here are a few examples of unknown places in Amsterdam that you might consider adding to your website:
 
-The Begijnhof: This is a secluded courtyard in the center of Amsterdam that is home to a group of historic houses and a small church. It's a peaceful and quiet spot that is a great place to escape the hustle and bustle of the city.
+        The Begijnhof: This is a secluded courtyard in the center of Amsterdam that is home to a group of historic
+        houses and a small church. It's a peaceful and quiet spot that is a great place to escape the hustle and bustle
+        of the city.
 
-The Zaanse Schans: This is a picturesque village located just outside of Amsterdam that is home to a collection of well-preserved 18th- and 19th-century Dutch houses, windmills, and a traditional cheese farm.
+        The Zaanse Schans: This is a picturesque village located just outside of Amsterdam that is home to a collection
+        of well-preserved 18th- and 19th-century Dutch houses, windmills, and a traditional cheese farm.
 
-The Botanical Garden: Amsterdam has a beautiful botanical garden located in the heart of the city where you can see a wide variety of plants from all over the world in a beautiful setting.
+        The Botanical Garden: Amsterdam has a beautiful botanical garden located in the heart of the city where you can
+        see a wide variety of plants from all over the world in a beautiful setting.
 
-The Amsterdamse Bos: This is a large park located just outside of Amsterdam that is home to a variety of recreational activities, including swimming, cycling, and horseback riding.
+        The Amsterdamse Bos: This is a large park located just outside of Amsterdam that is home to a variety of
+        recreational activities, including swimming, cycling, and horseback riding.
 
-The Tropenmuseum: The Tropenmuseum is a museum that focuses on the culture, art, and history of non-Western societies, it is less known than the Rijksmuseum but it has a very interesting collection.
+        The Tropenmuseum: The Tropenmuseum is a museum that focuses on the culture, art, and history of non-Western
+        societies, it is less known than the Rijksmuseum but it has a very interesting collection.
 
-The Ons' Lieve Heer op Solder: This is a 17th-century canal house that has been converted into a museum. It's a unique way to experience life in Amsterdam during the Golden Age.
+        The Ons' Lieve Heer op Solder: This is a 17th-century canal house that has been converted into a museum. It's a
+        unique way to experience life in Amsterdam during the Golden Age.
 
-The Amsterdam City Archives: The Amsterdam City Archives is a fascinating collection of historical documents, photographs, and maps that tell the story of Amsterdam's past.
+        The Amsterdam City Archives: The Amsterdam City Archives is a fascinating collection of historical documents,
+        photographs, and maps that tell the story of Amsterdam's past.
 
-The Jewish Historical Museum: This museum is dedicated to the history of Jewish people in Amsterdam and the Netherlands, it's a good place to learn about the Jewish culture and history.
+        The Jewish Historical Museum: This museum is dedicated to the history of Jewish people in Amsterdam and the
+        Netherlands, it's a good place to learn about the Jewish culture and history.
 
-The NDSM Wharf: This is a large former shipyard located on the north bank of the IJ River that has been converted into a trendy cultural and artistic center.
+        The NDSM Wharf: This is a large former shipyard located on the north bank of the IJ River that has been
+        converted into a trendy cultural and artistic center.
 
-The Hermitage Amsterdam: The Hermitage Amsterdam is a museum located in the heart of Amsterdam, it's a branch of the Hermitage Museum in St. Petersburg and it often has temporary exhibitions of masterpieces from the Hermitage collection.
+        The Hermitage Amsterdam: The Hermitage Amsterdam is a museum located in the heart of Amsterdam, it's a branch of
+        the Hermitage Museum in St. Petersburg and it often has temporary exhibitions of masterpieces from the Hermitage
+        collection.
     </p>
 </body>
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-    <a href="#unexpected" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa fa-github w3-hover-opacity"></i>      
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+
+<footer class="footer">
+    <div class="footer-container">
+      <nav class="footer-nav">
+        <ul class="footer-menu">
+          <li><a href="/index.html">Home</a></li>
+          <li title="Check my github live pages."><a href="https://martingue.github.io"><i class="fa fa fa-github"></i></a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <p title="Thanks very much for visiting Surprising Amsterdam!!" class="footer-copyright">&copy; Surprising Amsterdam</p>
     </div>
   </footer>
 
