--- a/Eindopdracht HTML&CSS/surprise.html
+++ b/Eindopdracht HTML&CSS/surprise.html
@@ -13,20 +13,20 @@
 
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="index.html">Home</a>
+        <a href="../Eindopdracht HTML&CSS/index.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn">History
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="history.html#first">Early History</a>
-                <a href="history.html#middle">17th-18th-19th Century</a>
-                <a href="history.html#last">Last Centuries</a>
+                <a href="../Eindopdracht HTML&CSS/history.html#first">Early History</a>
+                <a href="../Eindopdracht HTML&CSS/history.html#middle">17th-18th-19th Century</a>
+                <a href="../Eindopdracht HTML&CSS/history.html#last">Last Centuries</a>
             </div>
         </div>
-        <a href="/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="/surprise.html" class="active">Surprise</a>
-        <a href="contact.html">Contact</a>
+        <a href="../Eindopdracht HTML&CSS/unexpected.html" id="unexpected">Unexpected</a>
+        <a href="../Eindopdracht HTML&CSS/surprise.html" class="active">Surprise</a>
+        <a href="../Eindopdracht HTML&CSS/contact.html">Contact</a>
         <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
