--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -19,14 +19,14 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="history.html#first">Early History</a>
-                <a href="history.html#middle">17th-18th-19th Century</a>
-                <a href="history.html#last">Last Centuries</a>
+                <a href="../Eindopdracht HTML&CSS/history.html#first">Early History</a>
+                <a href="../Eindopdracht HTML&CSS/history.html#middle">17th-18th-19th Century</a>
+                <a href="../Eindopdracht HTML&CSS/history.html#last">Last Centuries</a>
             </div>
         </div>
-        <a href="/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="/surprise.html">Surprise</a>
-        <a href="contact.html">Contact</a>
+        <a href="../Eindopdracht HTML&CSS/unexpected.html" id="unexpected">Unexpected</a>
+        <a href="../Eindopdracht HTML&CSS//surprise.html">Surprise</a>
+        <a href="../Eindopdracht HTML&CSS/contact.html">Contact</a>
         <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>  
