--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <a href="../Eindopdracht HTML&CSS/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="../Eindopdracht HTML&CSS//surprise.html">Surprise</a>
+        <a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a>
         <a href="../Eindopdracht HTML&CSS/contact.html">Contact</a>
         <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
