--- a/Eindopdracht HTML&CSS/unexpected.html
+++ b/Eindopdracht HTML&CSS/unexpected.html
@@ -2,87 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="responsive.js"></script>
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="responsive.js"></script>
+  <title>Unexpected Amsterdam</title>
 </head>
 
-<body>
-    <div class="topnav" id="myTopnav">
-        <a href="../Eindopdracht HTML&CSS/index.html">Home</a>
-        <div class="dropdown">
-            <button class="dropbtn">History
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="../Eindopdracht HTML&CSS/history.html#first">Early History</a>
-                <a href="../Eindopdracht HTML&CSS/history.html#middle">17th-18th-19th Century</a>
-                <a href="../Eindopdracht HTML&CSS/history.html#last">Last Centuries</a>
-            </div>
-        </div>
-        <a href="../Eindopdracht HTML&CSS/unexpected.html" id="unexpected" class="active">Unexpected</a>
-        <a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a>
-        <a href="../Eindopdracht HTML&CSS/contact.html">Contact</a>
-        <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+<body id="top">
+  <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <div class="dropdown">
+      <button id="myBtn" class="dropbtn">History
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="history.html#first">Early History</a>
+        <a href="history.html#middle">17th-18th-19th Century</a>
+        <a href="history.html#last">Last Centuries</a>
+      </div>
     </div>
+    <a href="/unexpected.html" id="unexpected" class="active">Unexpected</a>
+    <a href="/surprise.html">Surprise</a>
+    <a href="contact.html">Contact</a>
+    <a href="/index.html#top" class="split"><img src="/images/logo.png" alt="logo" class="logo"></a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
+  </div>
+  <br>
+  <h1>Unexpected Amsterdam</h1>
+  <br>
+  <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
 
-    <img class="logo" src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
+  <p>
+    Amsterdam is a popular tourist destination, known for its picturesque canals, historic architecture, and
+    world-renowned museums. However, there are also many lesser-known places in Amsterdam that are worth visiting.
+    Here are a few examples of unknown places in Amsterdam that you might consider adding to your website:
 
-    <p>
-        Amsterdam is a popular tourist destination, known for its picturesque canals, historic architecture, and
-        world-renowned museums. However, there are also many lesser-known places in Amsterdam that are worth visiting.
-        Here are a few examples of unknown places in Amsterdam that you might consider adding to your website:
+    The Begijnhof: This is a secluded courtyard in the center of Amsterdam that is home to a group of historic
+    houses and a small church. It's a peaceful and quiet spot that is a great place to escape the hustle and bustle
+    of the city.
 
-        The Begijnhof: This is a secluded courtyard in the center of Amsterdam that is home to a group of historic
-        houses and a small church. It's a peaceful and quiet spot that is a great place to escape the hustle and bustle
-        of the city.
+    <img src="https://blockchain-consultancy.eu/images-surprising/zaanseschans.jpg" alt="Zaanse Schans">
+  <p>
+    The Zaanse Schans: This is a picturesque village located just outside of Amsterdam that is home to a collection
+    of well-preserved 18th- and 19th-century Dutch houses, windmills, and a traditional cheese farm.
+  </p>
+  <br>
+  <img src="https://blockchain-consultancy.eu/images-surprising/tulip.jpg" alt="">
+  The Botanical Garden: Amsterdam has a beautiful botanical garden located in the heart of the city where you can
+  see a wide variety of plants from all over the world in a beautiful setting.
 
-        The Zaanse Schans: This is a picturesque village located just outside of Amsterdam that is home to a collection
-        of well-preserved 18th- and 19th-century Dutch houses, windmills, and a traditional cheese farm.
+  The Amsterdamse Bos: This is a large park located just outside of Amsterdam that is home to a variety of
+  recreational activities, including swimming, cycling, and horseback riding.
 
-        The Botanical Garden: Amsterdam has a beautiful botanical garden located in the heart of the city where you can
-        see a wide variety of plants from all over the world in a beautiful setting.
+  The Tropenmuseum: The Tropenmuseum is a museum that focuses on the culture, art, and history of non-Western
+  societies, it is less known than the Rijksmuseum but it has a very interesting collection.
 
-        The Amsterdamse Bos: This is a large park located just outside of Amsterdam that is home to a variety of
-        recreational activities, including swimming, cycling, and horseback riding.
 
-        The Tropenmuseum: The Tropenmuseum is a museum that focuses on the culture, art, and history of non-Western
-        societies, it is less known than the Rijksmuseum but it has a very interesting collection.
 
-        The Ons' Lieve Heer op Solder: This is a 17th-century canal house that has been converted into a museum. It's a
-        unique way to experience life in Amsterdam during the Golden Age.
+  The Ons' Lieve Heer op Solder: This is a 17th-century canal house that has been converted into a museum. It's a
+  unique way to experience life in Amsterdam during the Golden Age.
 
-        The Amsterdam City Archives: The Amsterdam City Archives is a fascinating collection of historical documents,
-        photographs, and maps that tell the story of Amsterdam's past.
+  The Amsterdam City Archives: The Amsterdam City Archives is a fascinating collection of historical documents,
+  photographs, and maps that tell the story of Amsterdam's past.
 
-        The Jewish Historical Museum: This museum is dedicated to the history of Jewish people in Amsterdam and the
-        Netherlands, it's a good place to learn about the Jewish culture and history.
+  The Jewish Historical Museum: This museum is dedicated to the history of Jewish people in Amsterdam and the
+  Netherlands, it's a good place to learn about the Jewish culture and history.
 
-        The NDSM Wharf: This is a large former shipyard located on the north bank of the IJ River that has been
-        converted into a trendy cultural and artistic center.
+  The NDSM Wharf: This is a large former shipyard located on the north bank of the IJ River that has been
+  converted into a trendy cultural and artistic center.
+<p>
+  The Hermitage Amsterdam: The Hermitage Amsterdam is a museum located in the heart of Amsterdam, it's a branch of
+  the Hermitage Museum in St. Petersburg and it often has temporary exhibitions of masterpieces from the Hermitage
+  collection.
+  </p>
 
-        The Hermitage Amsterdam: The Hermitage Amsterdam is a museum located in the heart of Amsterdam, it's a branch of
-        the Hermitage Museum in St. Petersburg and it often has temporary exhibitions of masterpieces from the Hermitage
-        collection.
-    </p>
-</body>
 
-<footer class="footer">
+  <footer class="footer">
     <div class="footer-container">
       <nav class="footer-nav">
         <ul class="footer-menu">
-          <li><a href="/index.html">Home</a></li>
-          <li title="Check my github live pages."><a href="https://martingue.github.io"><i class="fa fa fa-github"></i></a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+          </li>
+          <li title="Check my github live pages."><a href="https://martingue.github.io">
+              <i class="fa fa fa-github"></i></a></li>
         </ul>
       </nav>
-      <p title="Thanks very much for visiting Surprising Amsterdam!!" class="footer-copyright">&copy; Surprising Amsterdam</p>
+      <div title="Get in contact with us." class="footer-contact"><a href="/contact.html">Contact</a></div>
     </div>
   </footer>
+
+  <script src="responsive.js"></script>
+
+</body>
 
 </html>
