--- a/Eindopdracht HTML&CSS/history.html
+++ b/Eindopdracht HTML&CSS/history.html
@@ -11,33 +11,68 @@
     <title>Let's dive in the history of Amsterdam!</title>
 </head>
 
-<body>
+<body id="top">
     <div class="topnav" id="myTopnav">
-        <a href="../Eindopdracht HTML&CSS/index.html">Home</a>
-        <div class="dropdown">
-            <a href="../Eindopdracht HTML&CSS/history.html" class="active" class="dropbtn">History
+        <a href="index.html">Home</a>
+        <div class="dropdown active">
+            <a href="history.html" class="dropbtn" id="myBtn">History
                 <i class="fa fa-caret-down"></i>
             </a>
-            <div class="dropdown-content">
-                <a href="../Eindopdracht HTML&CSS/history.html#first">Early History</a>
-                <a href="../Eindopdracht HTML&CSS/history.html#middle">17th-18th-19th Century</a>
-                <a href="../Eindopdracht HTML&CSS/history.html#last">Last Centuries</a>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="history.html#first">Early History</a>
+                <a href="history.html#middle">17th-18th-19th Century</a>
+                <a href="history.html#last">Last Centuries</a>
             </div>
         </div>
-        <a href="../Eindopdracht HTML&CSS/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="../Eindopdracht HTML&CSS/surprise.html">Surprise</a>
-        <a href="../Eindopdracht HTML&CSS/contact.html">Contact</a>
-        <a href="#about" class="split"><img src="/images/logo.png" alt="logo" height="16px"></a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="/unexpected.html" id="unexpected">Unexpected</a>
+        <a href="/surprise.html">Surprise</a>
+        <a href="contact.html">Contact</a>
+        <a href="/index.html#top" class="split"><img src="/images/logo.png" alt="logo" class="logo"></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
     </div>
+    <br>
 
-    <img class="logo" src="/images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam" class="center">
+    <br>
+    <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
     <h2 id="first">Early history</h2>
+
+    <table>
+        <caption>
+            <h2>Tijdlijn van de geschiedenis van Amsterdam.</h2>
+        </caption>
+        <colgroup>
+            <col span="4">
+            <col span="2">
+        </colgroup>
+        <thead>
+            <tr>
+                <th colspan="4" scope="col">Vroege historie</th>
+                <th colspan="2" scope="col">Moderne tijd</th>
+            </tr>
+        </thead>
+        <tr>
+            <td>1275</td>
+            <td>1600</td>
+            <td>1700</td>
+            <td>1800</td>
+            <td>1900</td>
+            <td>1950</td>           
+        </tr>
+        <tr>
+            <td>Tol-recht</td>
+            <td>Hallo</td>
+            <td>Ons lieve Heer op Solder</td>
+            <td>Paleis</td>
+            <td>Uitbreiding</td>
+            <td>Wederopbouw</td>           
+        </tr>
+    </table>
+
     On October 27, 1275, Count Floris V granted toll-free access to the people at the dam in the Amstel. The Toll
     Privilege from 1275 is the oldest written piece mentioning Amsterdam.
     <br>
 
-    <img src="/images/tolprivilege.jpg" alt="tolprivilege">
+    <img src="https://blockchain-consultancy.eu/images-surprising//tolprivilege.jpg" alt="tolprivilege">
     <p>
         Amsterdam is the capital and largest city of the Netherlands. It has a rich history that spans several
         centuries.
@@ -45,8 +80,8 @@
         The origins of Amsterdam can be traced back to the 12th century, when a small fishing village called
         "Aemstelredamme" was established on the banks of the Amstel River.</p>
 
-    <img src="/images/damrak2-ahm.png" alt="drawing of a dam in the Amstel river">
-    <img src="/images/kog.jpg" alt="map of old Aemstelredamme">
+    <img src="https://blockchain-consultancy.eu/images-surprising/damrak2-ahm.png" alt="drawing of a dam in the Amstel river">
+    <img src="https://blockchain-consultancy.eu/images-surprising/kog.jpg" alt="map of old Aemstelredamme">
 
 
 
@@ -60,23 +95,28 @@
         thriving merchant class. It was also a center of art, science, and culture, with many famous artists, such as
         Rembrandt and Vermeer, working and living in the city.
 
+    <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="middle">17th-18th-19th Century</h2>
-    <img src="/images/17eeuw.jpg" alt="17th century">
-    <img src="/images/800px-Cornelis_anthonisz_vogelvluchtkaart_amsterdam.jpeg" alt="old map of Amsterdam">
+    <img src="https://blockchain-consultancy.eu/images-surprising/17eeuw.jpg" alt="17th century">
+    <img src="https://blockchain-consultancy.eu/images-surprising/800px-Cornelis_anthonisz_vogelvluchtkaart_amsterdam.jpeg" alt="old map of Amsterdam">
     <br>
 
     In the 17th century, Amsterdam continued to flourish as a major center of trade and commerce. The Dutch East
     India Company, which was based in Amsterdam, became one of the most powerful companies in the world, and
     Amsterdam was a major center of the global trade in spices, textiles, and other goods.
     <br>
-    In the 18th and 19th centuries, Amsterdam's importance as a center of trade and commerce began to decline, but
-    the city continued to grow and evolve. The industrial revolution brought new industries and new forms of
-    transportation to the city, and Amsterdam became a major center of banking, insurance, and other services.
-
+    <p>
+        In the 18th and 19th centuries, Amsterdam's importance as a center of trade and commerce began to decline, but
+        the city continued to grow and evolve. The industrial revolution brought new industries and new forms of
+        transportation to the city, and Amsterdam became a major center of banking, insurance, and other services.
+    </p>
+    <br>
+    <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="last">Last Centuries</h2>
-    <img src="/images/paard.jpg" alt="paard en koets">
+    <img src="https://blockchain-consultancy.eu/images-surprising/paard.jpg" alt="paard en koets">
     <img src="/images/street-jordaan.jpg" alt="street in the jordaan ">
     <br>
+    <p>
     In the 20th century, Amsterdam faced a number of challenges, including the devastation of World War II and the
     decline of traditional industries. However, the city has also undergone a process of revitalization and renewal,
     becoming a major center of tourism, culture, and innovation. Today, Amsterdam is a vibrant, cosmopolitan city
@@ -84,19 +124,24 @@
 
     </p>
 
-</body>
 
-<footer class="footer">
-    <div class="footer-container">
-      <nav class="footer-nav">
-        <ul class="footer-menu">
-          <li><a href="/index.html">Home</a></li>
-          <li title="Check my github live pages."><a href="https://martingue.github.io"><i class="fa fa fa-github"></i></a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <p title="Thanks very much for visiting Surprising Amsterdam!!" class="footer-copyright">&copy; Surprising Amsterdam</p>
-    </div>
-  </footer>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <nav class="footer-nav">
+                <ul class="footer-menu">
+                    <li title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+                    </li>
+                    <li title="Check my github live pages."><a href="https://martingue.github.io">
+                            <i class="fa fa fa-github"></i></a></li>
+                </ul>
+            </nav>
+            <div title="Get in contact with us." class="footer-contact"><a href="/contact.html">Contact</a></div>
+        </div>
+    </footer>
+
+    <script src="responsive.js"></script>
+
+</body>
 
 </html>
