--- a/Eindopdracht HTML&CSS/history.html
+++ b/Eindopdracht HTML&CSS/history.html
@@ -24,10 +24,10 @@
                 <a href="history.html#last">Last Centuries</a>
             </div>
         </div>
-        <a href="/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="/surprise.html">Surprise</a>
+        <a href="unexpected.html" id="unexpected">Unexpected</a>
+        <a href="surprise.html">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="/index.html#top" class="split"><img src="/images/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
     </div>
     <br>
@@ -114,7 +114,7 @@
     <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="last">Last Centuries</h2>
     <img src="https://blockchain-consultancy.eu/images-surprising/paard.jpg" alt="paard en koets">
-    <img src="/images/street-jordaan.jpg" alt="street in the jordaan ">
+    <img src="https://blockchain-consultancy.eu/images-surprising/street-jordaan.jpg" alt="street in the jordaan ">
     <br>
     <p>
     In the 20th century, Amsterdam faced a number of challenges, including the devastation of World War II and the
