--- a/Eindopdracht HTML&CSS/surprise.html
+++ b/Eindopdracht HTML&CSS/surprise.html
@@ -24,10 +24,10 @@
                 <a href="history.html#last">Last Centuries</a>
             </div>
         </div>
-        <a href="/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="/surprise.html" class="active">Surprise</a>
+        <a href="unexpected.html" id="unexpected">Unexpected</a>
+        <a href="surprise.html" class="active">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="/index.html#top" class="split"><img src="/images/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
     </div>
     <br>
