--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -25,10 +25,10 @@
                 <a href="history.html#last">Last Centuries</a>
             </div>
         </div>
-        <a href="/unexpected.html" id="unexpected">Unexpected</a>
-        <a href="/surprise.html">Surprise</a>
+        <a href="unexpected.html" id="unexpected">Unexpected</a>
+        <a href="surprise.html">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="/index.html#top" class="split"><img src="/images/logo.png" class="logo" alt="logo"></a>
+        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" class="logo" alt="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
 
     </div>
