--- a/Eindopdracht HTML&CSS/unexpected.html
+++ b/Eindopdracht HTML&CSS/unexpected.html
@@ -90,7 +90,7 @@
               <i class="fa fa fa-github"></i></a></li>
         </ul>
       </nav>
-      <div title="Get in contact with us." class="footer-contact"><a href="/contact.html">Contact</a></div>
+      <div title="Get in contact with us." class="footer-contact"><a href="contact.html">Contact</a></div>
     </div>
   </footer>
 
